fixed fonts and letter spacing

--- a/themes/tartan/static/css/fonts.css
+++ b/themes/tartan/static/css/fonts.css
@@ -25,29 +25,29 @@
        url('../fonts/ubuntu-v10-latin-500.svg#Ubuntu') format('svg'); /* Legacy iOS */
 }
 
-/* open-sans-regular - latin */
+/* noto-sans-regular - latin */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Noto Sans';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/open-sans-v14-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Regular'), local('OpenSans-Regular'),
-       url('../fonts/open-sans-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/open-sans-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/open-sans-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/open-sans-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/open-sans-v14-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
+  src: url('../fonts/noto-sans-v6-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Noto Sans'), local('NotoSans'),
+       url('../fonts/noto-sans-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/noto-sans-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/noto-sans-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/noto-sans-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/noto-sans-v6-latin-regular.svg#NotoSans') format('svg'); /* Legacy iOS */
 }
-/* open-sans-600 - latin */
+/* noto-sans-700 - latin */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Noto Sans';
   font-style: normal;
-  font-weight: 600;
-  src: url('../fonts/open-sans-v14-latin-600.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'),
-       url('../fonts/open-sans-v14-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/open-sans-v14-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/open-sans-v14-latin-600.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/open-sans-v14-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/open-sans-v14-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
+  font-weight: 700;
+  src: url('../fonts/noto-sans-v6-latin-700.eot'); /* IE9 Compat Modes */
+  src: local('Noto Sans Bold'), local('NotoSans-Bold'),
+       url('../fonts/noto-sans-v6-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/noto-sans-v6-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/noto-sans-v6-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/noto-sans-v6-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/noto-sans-v6-latin-700.svg#NotoSans') format('svg'); /* Legacy iOS */
 }
