--- a/themes/tartan/static/css/main.css
+++ b/themes/tartan/static/css/main.css
@@ -72,6 +72,7 @@ html {
   margin-right: 10px;
   width: 60px;
   font-weight: 500;
+  letter-spacing: -0.01em;
   color: WhiteSmoke;
   text-decoration: none;
   -webkit-transition: box-shadow .15s, background-color .15s ease-in-out;
@@ -96,9 +97,20 @@ html {
   font-weight: normal;
   margin-left: 8%;
   margin-right: 8%;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   overflow: visible;
   padding-bottom: 1%;
+}
+
+#content h1, h2 {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 500;
+  margin-top: 25px;
+  margin-bottom: 10px;
+}
+
+#content h2 {
+  letter-spacing: -0.03em;
 }
 
 #content ul li:before {
@@ -156,11 +168,13 @@ html {
 
 #header h1 {
   font-weight: 500;
+  letter-spacing: -0.01em;
   margin: 0;
 }
 
 #header h2 {
   font-weight: 500;
+  letter-spacing: -0.04em;
   margin-top: 5px;
   margin-bottom: 5px;
 }
@@ -216,7 +230,9 @@ p {
 }
 
 h3, h4, h5, h6 {
-  font-weight: 600;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 500;
+  letter-spacing: -0.03em;
   margin-top: 25px;
   margin-bottom: 10px;
 }
